c/examples/gcc/testsuite/c-c++-common/gomp/pr106836.c
/* PR c/106836 */
// { dg-additional-options "-Wno-deprecated-openmp" }
void
foo (void)
{
#pragma omp target parallel depend (source)	/* { dg-error "'depend\\\(source\\\)' is only allowed in 'omp ordered'" } */
  ;
#pragma omp taskwait
}
